# $Id: Makefile.am,v 1.2 2005/03/29 11:38:25 rdmp1c Exp $

# The root makefile. We simply list the subdirectory with the source (src has its
# own makefile, and we list any additional files (in their subdirectories) that
# we want to distribute.

SUBDIRS = src

# Include base HTML documentation, and the example NEXUS files in the distribution
EXTRA_DIST = html/NexusClassLibrary.html \
   data/LPCombined.nex data/P95rbcl.nex data/distances.nex \
   data/GPCombined.nex data/LPMolecular.nex data/W98morph.nex data/kenrickcrane.nex \
   data/GPMolecular.nex data/LPMorph.nex data/characters.nex \
   data/GPMorph.nex data/P95morph.nex data/characters.ref.txt


