noinst_LIBRARIES = libncl.a
libncl_a_SOURCES = allelesblock.cpp assumptionsblock.cpp charactersblock.cpp \
   datablock.cpp discretedatum.cpp discretematrix.cpp distancedatum.cpp \
   distancesblock.cpp nexus.cpp nexusblock.cpp nexustoken.cpp setreader.cpp \
   nxsstring.cpp nxsdate.cpp taxablock.cpp treesblock.cpp xnexus.cpp \
   allelesblock.h assumptionsblock.h charactersblock.h \
   datablock.h discretedatum.h discretematrix.h distancedatum.h \
   distancesblock.h nexus.h nexusdefs.h nexustoken.h setreader.h \
   nxsstring.h nxsdate.h taxablock.h treesblock.h xnexus.h 

